--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,13 +1,8 @@
 <h1>About</h1>
 <p>本導引倉儲: <a href="https://github.com/mdecycu/cd2022_guide">https://github.com/mdecycu/cd2022_guide</a></p>
 <p>本導引網站: <a href="https://mde.tw/cd2022_guide">https://mde.tw/cd2022_guide</a></p>
-<p>課程倉儲與網站:</p>
-<h4>何謂協同?</h4>
-<p style="padding-left: 30px;">若以拔河為例, "合作" (Cooperation) 的層次在多人參與既定的拔河活動, 過程中有許多傳統的實體集合練習, 最終目的則是能夠在傳統拔河活動中勝出.</p>
-<p style="padding-left: 30px;">在 cd2022 課程的定義下, "協同" (Collaborative) 設計的層次則希望能夠在"合作"的架構下, 納入更多的創新思維, 探討能否讓多人參與拔河活動, 各自在不同地理位置, 能在虛實整合與機電資架構的合成設計下, 讓多人進行一場公平的拔河活動, 且讓夢想成真的一隊得以克敵制勝.</p>
-<p style="padding-left: 30px;"><a href="/downloads/Collaboration, Coordination, and Cooperation Among Organizations - Establishing the Distinctive Meanings of These Terms Through a Systematic Literature Review.pdf">Collaboration, Coordination, and Cooperation Among Organizations - Establishing the Distinctive Meanings of These Terms Through a Systematic Literature Review.pdf</a></p>
 <h4>課程倉儲與網站:</h4>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/cd2022">https://github.com/mdecourse/cd2022</a></p>
+<p style="padding-left: 30px;"><a href="https://github.com/mdecycu/cd2022">https://github.com/mdecycu/cd2022</a></p>
 <p style="padding-left: 30px;"><a href="https://mde.tw/cd2022">https://mde.tw/cd2022</a></p>
 <h4>Week1:</h4>
 <h4 style="padding-left: 30px;">網路設定:</h4>
@@ -16,8 +11,8 @@
 <p style="padding-left: 60px;">若要在開機後, 防毒軟體啟動前, 以批次檔案的執行, 自動完成上述三項設定, 可以參考:</p>
 <p style="padding-left: 90px;">電腦輔助設計室 <a href="https://github.com/mdecourse/wcm2022/discussions/2">IPv6 網路設定</a></p>
 <h4 style="padding-left: 30px;">分組:</h4>
-<p style="padding-left: 60px;">利用 Ethercalc 收集各班學員的 Github 帳號與組別, 存入 <a href="https://github.com/mdecourse/studlist/tree/main/2022spring">https://github.com/mdecourse/studlist/tree/main/2022spring</a></p>
-<p style="padding-left: 60px;">各學員若 github 帳號有更動, 可以自行至 <a href="https://github.com/mdecourse/studlist">https://github.com/mdecourse/studlist</a> 倉儲, 以 pull requests 進行修改.</p>
+<p style="padding-left: 60px;">利用 Ethercalc 收集各班學員的 Github 帳號與組別, 存入 <a href="https://github.com/mdecycu/studlist/tree/main/2022spring">https://github.com/mdecycu/studlist/tree/main/2022spring</a></p>
+<p style="padding-left: 60px;">各學員若 github 帳號有更動, 可以自行至 <a href="https://github.com/mdecycu/studlist">https://github.com/mdecycu/studlist</a>  倉儲, 以 pull requests 進行修改.</p>
 <p style="padding-left: 60px;">以 2b 為例, 每一大組 8 人, 且分為兩個 4 人小組, 目前可以透過 <a href="http://mde.tw/studlist/2022spring/2b.txt">http://mde.tw/studlist/2022spring/2b.txt</a> 讀取. 且透過 <a href="/downloads/read_data_from_nfulist.py">read_data_from_nfulist.py</a> 可以在近端讀取各班學員的 github 帳號與組別.</p>
 <p style="padding-left: 60px;">目前碰到的問題是:</p>
 <p style="padding-left: 90px;">能不能透過隨機方式自動幫尚未納組的學員分組?</p>
@@ -30,6 +25,7 @@
 <h4 style="padding-left: 30px;">課程第一階段要求:</h4>
 <p style="padding-left: 60px;">每一個大組都要設法提供 solvespace, NX1980 格式的 <a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">uarm</a> (Onshape 格式) 機械手臂零組件.</p>
 <div id="disqus_thread"></div>
+<p>
 <script>
 /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -47,6 +43,7 @@
     (d.head || d.body).appendChild(s);
     })();
 </script>
+</p>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript><h2>IPv6</h2>
 <p>電腦輔助設計室 <a href="https://github.com/mdecourse/wcm2022/discussions/2">IPv6 網路設定</a></p>
 <p><a href="https://www.tipo.gov.tw/tw/cp-180-219597-bf26c-1.html">智慧財產局學校行政與電算中心篇</a></p>
@@ -151,8 +148,8 @@ var winkVideoData = {
 <h4 style="padding-left: 30px;">指定任務:</h4>
 <p style="padding-left: 60px;">請學員以全球資訊網頁的 URL 讀取各班資料後, 是否能夠以永續便捷的方式取得已經選好組別的<span style="background-color: #ffff99;">學員學號</span>、學員<span style="background-color: #ffff99;">個人倉儲連結</span>、學員<span style="background-color: #ffff99;">個人網站</span>、各組位於學員帳號下的<span style="background-color: #ffff99;">大組倉儲</span>以及各學員帳號下各大組的<span style="background-color: #ffff99;">協同網站</span>.</p>
 <p style="padding-left: 60px;">而針對尚未填入 github 帳號的學員, 以其學號作為其 github 帳號. 針對尚未列出分組序號的學員, 則委由隨機方式編入尚不足 8 名學員的組別, 若各組已經都補滿 8 名學員, 仍餘有尚未分組的學員時, 則採隨機方式從各班第一組依序補入各組後, 分別在個人及大分組的 w2 標題頁面中, 列出各大組與全班的上述要求資料.</p>
-<p style="padding-left: 60px;">到了 w4 各班學員分組已經底定, 若採 Brython 方式將學員資料讀出後進行排序與整合, 可以如 <a href="https://mde.tw/cd2022_guide/content/Brython.html">https://mde.tw/cd2022_guide/content/Brython.html</a> 中, 直接在網頁上即時列出與 <a href="https://mde.tw/studlist/2022spring/2a.txt">https://mde.tw/studlist/2022spring/2a.txt</a> 及 <a href="https://mde.tw/studlist/2022spring/2b.txt">https://mde.tw/studlist/2022spring/2b.txt</a> 對應的學員倉儲與網頁連結, 以及各學員帳號下的大組同步倉儲與網頁連結.</p>
-<p style="padding-left: 60px;">接下來若要採 CPython 在 Windows 環境中執行運算, 該如何進行?</p>
+<p style="padding-left: 60px;">到了 w4 各班學員分組已經底定, 若採 Brython 方式(全球資訊網前端)將學員資料讀出後進行排序與整合, 可以如 <a href="https://mde.tw/cd2022_guide/content/Brython.html">https://mde.tw/cd2022_guide/content/Brython.html</a> 中, 直接在網頁上即時列出與 <a href="https://mde.tw/studlist/2022spring/2a.txt">https://mde.tw/studlist/2022spring/2a.txt</a> 及 <a href="https://mde.tw/studlist/2022spring/2b.txt">https://mde.tw/studlist/2022spring/2b.txt</a> 對應的學員倉儲與網頁連結, 以及各學員帳號下的大組同步倉儲與網頁連結.</p>
+<p style="padding-left: 60px;">接下來若要採 CPython (全球資訊網後端或 <a href="https://en.wikipedia.org/wiki/Command-line_interface">CLI/GUI</a> 模式)在 Windows 環境中執行運算, 該如何進行?</p>
 <h4>w3 任務:</h4>
 <h4 style="padding-left: 30px;">問題緣起:</h4>
 <p style="padding-left: 60px;">w2 完成分組後, 各組即進入利用 NX1980 繪製 uArm 機械手臂的協同設計階段, 其中包括手臂兩側的正齒輪減速機設計, 以及各連桿與組立所需要的其他組件設計等 (完成圖如 <a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">Onshape 中的 uArm 組立圖</a>).</p>
@@ -188,7 +185,8 @@ var winkVideoData = {
 <p><a href="https://www.scoro.com/blog/tips-for-effective-meeting-management/">https://www.scoro.com/blog/tips-for-effective-meeting-management/</a></p>
 <p>結論是: 在協同產品設計流程, 該如何開會?</p><h1>Solvespace</h1>
 <p>根據 <a href="https://mde.tw/cad2021/content/Compile%20Solvespace.html">https://mde.tw/cad2021/content/Compile%20Solvespace.html</a> 中的說明, 可以利用 <a href="https://drive.google.com/file/d/16L08jH3ZtoMeeGWBJrP9DuIk-cby_Wqw/view?usp=sharing">compile_copsim_for_cd2022.7z</a> (file size: 5 GB, extracted size: 17.3 GB), 完成編譯.</p>
-<p>自行編譯 Solvespace 的目的是希望透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> 與 <a href="https://www.coppeliarobotics.com/helpFiles/en/importExport.htm">https://www.coppeliarobotics.com/helpFiles/en/importExport.htm</a> 的資訊, 自行在 Solvespace 中將組立檔案直接轉入 Coppeliasim 的場景檔案. 其中牽涉如何將 Solvespace 組立件中的零件檔案進行分割後, 以 <a href="https://en.wikipedia.org/wiki/STL">STL</a>、<a href="http://wiki.ros.org/urdf">URDF</a> 或 <a href="http://sdformat.org/">SDF</a> 格式直接轉入 Coppeliasim.</p><h1>NX1980</h1>
+<p>自行編譯 Solvespace 的目的是希望透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> 與 <a href="https://www.coppeliarobotics.com/helpFiles/en/importExport.htm">https://www.coppeliarobotics.com/helpFiles/en/importExport.htm</a> 的資訊, 自行在 Solvespace 中將組立檔案直接轉入 Coppeliasim 的場景檔案. 其中牽涉如何將 Solvespace 組立件中的零件檔案進行分割後, 以 <a href="https://en.wikipedia.org/wiki/STL">STL</a>、<a href="http://wiki.ros.org/urdf">URDF</a> 或 <a href="http://sdformat.org/">SDF</a> 格式直接轉入 Coppeliasim.</p><h1>NX</h1>
+<h2>NX1980</h2>
 <h4>NX1980 參考頁面:</h4>
 <p style="padding-left: 30px;">有關 Siemens NX 的歷史, 請參考 <a href="https://en.wikipedia.org/wiki/Siemens_NX">https://en.wikipedia.org/wiki/Siemens_NX</a></p>
 <p style="padding-left: 30px;"><a href="https://mde.tw/cd2022/content/NX1980.html">https://mde.tw/cd2022/content/NX1980.html</a></p>
@@ -261,7 +259,142 @@ http {
 <p style="padding-left: 90px;">就能同時在不同網路連線情況下, 啟動 NX1980.</p>
 <p style="padding-left: 90px;">以下的 bat 檔案, 能夠同時啟動 Python, Msys2 以及 NX1980:</p>
 <p style="padding-left: 120px;"><a href="/downloads/start_ipv6_nx1980_bat.txt">start_ipv6_nx1980_bat.txt</a></p>
-<p style="padding-left: 120px;">其中 Msys2 可用來編譯 Solvespace、SciTE、Fossil SCM 以及 CoppeliaSim, Python 可用來啟動個人動態與靜態網頁, 並透過 Leo Editor 編輯 Reveal.js 簡報.</p><h1>Onshape</h1>
+<p style="padding-left: 120px;">其中 Msys2 可用來編譯 Solvespace、SciTE、Fossil SCM 以及 CoppeliaSim, Python 可用來啟動個人動態與靜態網頁, 並透過 Leo Editor 編輯 Reveal.js 簡報.</p>
+<h3>Start_NX1980</h3>
+<p>NX1980 series 為 2021.06 的版本.</p>
+<p>啟動 NX1980 全部模組, 容量約 28.6 GB.</p>
+<p>start_nx1980_all.bat</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">@echo off
+set Disk=y
+subst %Disk%: "data"
+
+%Disk%:
+
+set HomePath=%Disk%:\home_mdecourse
+set HomeDrive=%Disk%:\home_mdecourse
+set Home=%Disk%:\home_mdecourse
+set USERPROFILE=%Disk%:\home_mdecourse
+
+REM 將系統 Python 程式的 io 設為 utf-8
+set PYTHONIOENCODING="utf-8"
+
+set PYTHONPATH=%Disk%:\py373\DLLs;%Disk%:\py373\Lib;%Disk%:\py373\Lib\site-packages;
+set PYTHONHOME=%Disk%:\py373
+
+set path_python=%Disk%:\py373;%Disk%:\py373\Scripts;
+set path_msys2=%Disk%:\msys64\mingw64\bin;
+REM coreutils is for compiling fossil scm
+set path_coreutils=%Disk%:\coreutils-5.3.0\bin;%Disk%:\depends22_x64;
+set path_tcc=%Disk%:\tcc;
+set path_cmake=%Disk%:\cmake-3.10.1-win64-x64\bin;
+set path_nodejs=Disk%:\nodejs;%Disk%:\nodejs\appdata\roaming\npm;
+set path_git=%Disk%:\portablegit\bin;
+set path_xming=%Disk%:\Xming;
+set path_latex=%%Disk%:\Pandoc;%Disk%:\TinyTeX\bin\win32;
+
+REM for NX1980
+REM use ipv6
+set FNP_IP_PRIORITY=6
+set UGII_BASE_DIR=%Disk%:\NX1980
+set TMP_DIR=%Disk%:\tmp
+set UGII_USER_PROFILE_DIR=%Disk%:\home_mdecourse
+set START_DIR=%TMP_DIR%
+set UGII_TMP_DIR=%TMP_DIR%
+set UGII_USER_DIR=%Disk%:\tmp
+set UGII_GROUP_DIR=%Disk%:\tmp
+set UGII_SITE_DIR=%Disk%:\tmp
+set UGII_BASE_DIR_CUSTOM=%UGII_BASE_DIR%
+
+set SPLM_LICENSE_SERVER=28000@xxx.xxx.xx.xx;28000@[xxxx:xxx:xxxx:xx::xx];28000@192.168.56.3
+set UGII_LANG=english
+
+set UGII_ROOT_DIR=%UGII_BASE_DIR%\ugii
+set UGS_LICENSE_BUNDLE=ACD10
+set UGII_TEMPLATE_DIR=%UGII_ROOT_DIR%\templates
+set ugpath=%UGII_BASE_DIR%\nxbin;%UGII_BASE_DIR%\ugii;%UGII_BASE_DIR%\NXBIN\Radical;%UGII_BASE_DIR%\NXBIN\managed;
+
+path=%ugpath%;%path%;%Disk%:;%path_python%;%path_msys2%;%path_tcc%;%path_git%;%path_cmake%;%path_coreutils%;
+
+start /MIN cmd.exe
+start /MIN cmd.exe
+start /MIN cmd.exe
+start /MIN cmd.exe
+
+start /MIN %Disk%:\wscite415\wscite\SciTE.exe
+start /MIN %Disk%:\wscite415\wscite\SciTE.exe
+
+%UGII_BASE_DIR%\ugii\ugraf.exe -nx | start /d  %UGII_BASE_DIR%\ugii %UGII_BASE_DIR%\nxbin\simcenter3d.exe | %UGII_BASE_DIR%\ugii\ugraf.exe -layout | %UGII_BASE_DIR%\ugii\ugraf.exe -view | %UGII_BASE_DIR%\ugii\ugraf.exe -mechatronics | %UGII_BASE_DIR%\ugii\ugraf.exe -simviewer
+
+Exit</pre>
+<p>指啟動 NX1980 基本模組, 容量約 15 GB.</p>
+<p>start_nx1980.bat</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">@echo off
+set Disk=y
+subst %Disk%: "data"
+
+%Disk%:
+
+set HomePath=%Disk%:\home_mdecourse
+set HomeDrive=%Disk%:\home_mdecourse
+set Home=%Disk%:\home_mdecourse
+set USERPROFILE=%Disk%:\home_mdecourse
+
+REM 將系統 Python 程式的 io 設為 utf-8
+set PYTHONIOENCODING="utf-8"
+
+set PYTHONPATH=%Disk%:\py373\DLLs;%Disk%:\py373\Lib;%Disk%:\py373\Lib\site-packages;
+set PYTHONHOME=%Disk%:\py373
+
+set path_python=%Disk%:\py373;%Disk%:\py373\Scripts;
+set path_msys2=%Disk%:\msys64\mingw64\bin;
+REM coreutils is for compiling fossil scm
+set path_coreutils=%Disk%:\coreutils-5.3.0\bin;%Disk%:\depends22_x64;
+set path_tcc=%Disk%:\tcc;
+set path_cmake=%Disk%:\cmake-3.10.1-win64-x64\bin;
+set path_nodejs=Disk%:\nodejs;%Disk%:\nodejs\appdata\roaming\npm;
+set path_git=%Disk%:\portablegit\bin;
+set path_xming=%Disk%:\Xming;
+set path_latex=%%Disk%:\Pandoc;%Disk%:\TinyTeX\bin\win32;
+
+REM for NX1980
+REM use ipv6
+set FNP_IP_PRIORITY=6
+set UGII_BASE_DIR=%Disk%:\NX1980
+set TMP_DIR=%Disk%:\tmp
+set UGII_USER_PROFILE_DIR=%Disk%:\home_mdecourse
+set START_DIR=%TMP_DIR%
+set UGII_TMP_DIR=%TMP_DIR%
+set UGII_USER_DIR=%Disk%:\tmp
+set UGII_GROUP_DIR=%Disk%:\tmp
+set UGII_SITE_DIR=%Disk%:\tmp
+set UGII_BASE_DIR_CUSTOM=%UGII_BASE_DIR%
+
+set SPLM_LICENSE_SERVER=28000@xxx.xxx.xx.xx;28000@[xxxx:xxx:xxxx:xx::xx];28000@192.168.56.3
+set UGII_LANG=english
+
+set UGII_ROOT_DIR=%UGII_BASE_DIR%\ugii
+set UGS_LICENSE_BUNDLE=ACD10,ACD11
+set UGII_TEMPLATE_DIR=%UGII_ROOT_DIR%\templates
+set ugpath=%UGII_BASE_DIR%\nxbin;%UGII_BASE_DIR%\ugii;%UGII_BASE_DIR%\NXBIN\Radical;%UGII_BASE_DIR%\NXBIN\managed;
+
+path=%ugpath%;%path%;%Disk%:;%path_python%;%path_msys2%;%path_tcc%;%path_git%;%path_cmake%;%path_coreutils%;
+
+start /MIN cmd.exe
+start /MIN cmd.exe
+start /MIN cmd.exe
+start /MIN cmd.exe
+
+start /MIN %Disk%:\wscite415\wscite\SciTE.exe
+start /MIN %Disk%:\wscite415\wscite\SciTE.exe
+
+%UGII_BASE_DIR%\ugii\ugraf.exe -nx
+
+Exit</pre>
+<h2>NX2008</h2>
+<p>NX2008 於 2022.01 釋出, 屬於 NX2007 系列 (2021.12 釋出). 容量約 30 GB.</p>
+<p><a href="https://github.com/Bioruebe/UniExtract2">https://github.com/Bioruebe/UniExtract2</a> 可用來解開 SiemensNX-2008_wntx64\nx\SiemensNX.msi, 但必須配合 SiemensNX-2008_wntx64\nx\VC_redist.x64.exe 的安裝或解壓縮檔案才能執行.</p>
+<p>至於要解開 SiemensNX-2008_wntx64\nx\VC_redist.x64.exe 中的檔案, 可先利用 <a href="https://github.com/wixtoolset/wix3/releases/tag/wix3112rtm">https://github.com/wixtoolset/wix3/releases/tag/wix3112rtm</a> 中的 wix311-binaries.zip, 以wix311-binaries\dark.exe vc_redist.x64.exe -x x64-extracted, 在 x64-extracted 目錄中取得 x64-extracted\AttachedContainer\packages\vcRuntimeMinimum_amd64\vc_runtimeMinimum_x64.msi 之後, 再利用 UniExtract2 解開所需的 dll 檔案後, 再放入 NXBIN 目錄.</p>
+<p>NX2008 啟動方式同 NX1980.</p><h1>Onshape</h1>
 <p>以 <a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">Onshape 中的 uArm robot</a>. (並未自行繪製零組件而是從 <a href="/downloads/uArmSwiftPro_UP1300_3D.STEP">uArmSwiftPro_UP1300_3D.STEP</a> import)</p>
 <h1>Tic-Tat-Toe</h1>
 <p><a href="https://www.universal-robots.com/products/ur10-robot/">UR10e</a> Robot 透過影像辨識與人進行 <a href="https://en.wikipedia.org/wiki/Tic-tac-toe">Tic-Tat-Toe</a> 遊戲:</p>
