--- a/content/IPv6.html
+++ b/content/IPv6.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a></li></ul><li><a href='Solvespace.html'>Solvespace</a><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a></li></ul><li><a href='NX2008.html'>NX2008</a></li></ul><li><a href='Onshape.html'>Onshape</a><li class='has-children'><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><ul class='dropdown'><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a></li></ul><li><a href='Solvespace.html'>Solvespace</a><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a></li></ul><li><a href='NX2008.html'>NX2008</a></li></ul><li><a href='Onshape.html'>Onshape</a><li class='has-children'><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><ul class='dropdown'><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,14 +141,18 @@ img.add_border {
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Grouping.html'>Next</a> >> Grouping<br /><h1>IPv6</h1>
 <p>電腦輔助設計室 <a href="https://github.com/mdecourse/wcm2022/discussions/2">IPv6 網路設定</a></p>
+<p>手機、筆電或平板可以透過 810WIFI 無線網路接點連線, 取得系網 IPv6 連外網址與 IPv4 NAT 內部網址.</p>
 <p><a href="https://www.tipo.gov.tw/tw/cp-180-219597-bf26c-1.html">智慧財產局學校行政與電算中心篇</a></p>
 <p><a href="https://www.netadmin.com.tw/netadmin/zh-tw/snapshot/484F7B4D900C4BDF988F0D6AAE2A8706">如何避免惡意軟體的侵害</a>?</p>
 <h4>問題:</h4>
 <p style="padding-left: 30px;">為何不使用 NAT 機制, 而讓電腦輔助設計室中的電腦直接連上外部網路?</p>
+<p style="padding-left: 60px;">因為與 IPv4 協定比較, IPv6 協定安全性較高, 且直接連外可取得較大頻寬, 無需採 port mapping 就可啟動 IPv6 協定伺服器.</p>
 <p style="padding-left: 30px;">使用 IPv6 連網有哪些好處? 有沒有壞處?</p>
+<p style="padding-left: 60px;">好處如上, 而壞處是若要連線到只支援 IPv4 協定的網站, 需要透過雙協定支援的 Proxy, 其中包括 http(s) 與 git.</p>
 <p style="padding-left: 30px;">如何使用批次檔案完成 IPv6 網路設定, 避開惡意軟體的網路攻擊?</p>
-<p></p>
-<br />About << <a href='About.html'>Previous</a> <a href='Grouping.html'>Next</a> >> Grouping</div>
+<p style="padding-left: 60px;">請參考 <a href="https://github.com/mdecourse/wcm2022/discussions/2">IPv6 網路設定</a> 說明.</p>
+<p style="padding-left: 30px;"></p>
+<p></p><br />About << <a href='About.html'>Previous</a> <a href='Grouping.html'>Next</a> >> Grouping</div>
         
     <!-- footer -->
       <div class="container">
