--- a/content/NX2008.html
+++ b/content/NX2008.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a></li></ul><li><a href='Solvespace.html'>Solvespace</a><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a></li></ul><li><a href='NX2008.html'>NX2008</a></li></ul><li><a href='Onshape.html'>Onshape</a><li class='has-children'><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><ul class='dropdown'><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a></li></ul><li><a href='Solvespace.html'>Solvespace</a><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a></li></ul><li><a href='NX2008.html'>NX2008</a></li></ul><li><a href='Onshape.html'>Onshape</a><li class='has-children'><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><ul class='dropdown'><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,7 +143,8 @@ img.add_border {
 <p>NX2008 於 2022.01 釋出, 屬於 NX2007 系列 (2021.12 釋出). 容量約 30 GB.</p>
 <p><a href="https://github.com/Bioruebe/UniExtract2">https://github.com/Bioruebe/UniExtract2</a> 可用來解開 SiemensNX-2008_wntx64\nx\SiemensNX.msi, 但必須配合 SiemensNX-2008_wntx64\nx\VC_redist.x64.exe 的安裝或解壓縮檔案才能執行.</p>
 <p>至於要解開 SiemensNX-2008_wntx64\nx\VC_redist.x64.exe 中的檔案, 可先利用 <a href="https://github.com/wixtoolset/wix3/releases/tag/wix3112rtm">https://github.com/wixtoolset/wix3/releases/tag/wix3112rtm</a> 中的 wix311-binaries.zip, 以 wix311-binaries\dark.exe vc_redist.x64.exe -x x64-extracted, 在 x64-extracted 目錄中取得 x64-extracted\AttachedContainer\packages\vcRuntimeMinimum_amd64\vc_runtimeMinimum_x64.msi 之後, 再利用 UniExtract2 解開所需的 dll 檔案後, 再放入 NXBIN 目錄.</p>
-<p>NX2008 啟動方式同 NX1980.</p><br />Start_NX1980 << <a href='Start_NX1980.html'>Previous</a> <a href='Onshape.html'>Next</a> >> Onshape</div>
+<p>NX2008 啟動方式同 NX1980.</p>
+<br />Start_NX1980 << <a href='Start_NX1980.html'>Previous</a> <a href='Onshape.html'>Next</a> >> Onshape</div>
         
     <!-- footer -->
       <div class="container">
